--- a/trunk/osghelp/HelloJavaDLL/test.html
+++ b/trunk/osghelp/HelloJavaDLL/test.html
@@ -20,7 +20,7 @@
   </head>
   <body>
 	<p>The purpose of this code is to load a dll using java so the c++ dll can run in a browser</p>
-  <applet code="test.class" width="512" height="512">
+  <applet code="test" archive="test.jar" width="512" height="512">
 	no support for java
   </applet>
 </html>
